src/objects/SPE_SprintTasks__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Arnab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaushik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satyajit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sudeshna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BuildUnitTestCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Build &amp; Unit Test Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DesignDocumentUpdated__c</fullName>
        <label>Design Document Updated</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours_Assigned__c</fullName>
        <label>Hours Assigned</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <label>Hours Spent</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SprintBacklog__c</fullName>
        <label>Sprint Backlog</label>
        <referenceTo>SPE_SprintBacklog__c</referenceTo>
        <relationshipLabel>Sprint Tasks</relationshipLabel>
        <relationshipName>Sprint_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TaskDescription__c</fullName>
        <label>Task Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserManualUpdated__c</fullName>
        <label>User Manual Updated</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sprint Tasks</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>